--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "Homepage"
+    "liveServer.settings.multiRootWorkspaceName": "Homepage",
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#2E3000",
+        "titleBar.activeBackground": "#404300",
+        "titleBar.activeForeground": "#FCFFAD"
+    }
 }
